Bug 231264. Set IFRAME minimum width properly. r+sr=dbaron,a=choffman